RESOLVED FIXED222455
[LFC][IFC] Inline boxes should not be referred as inline containers
https://bugs.webkit.org/show_bug.cgi?id=222455
Summary [LFC][IFC] Inline boxes should not be referred as inline containers
alan
Reported 2021-02-25 20:34:51 PST
not many left.
Attachments
Patch (17.33 KB, patch)
2021-02-25 20:44 PST, alan
no flags
alan
Comment 1 2021-02-25 20:44:25 PST
EWS
Comment 2 2021-02-26 06:49:01 PST
Committed r273556: <https://commits.webkit.org/r273556> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421604 [details].
Radar WebKit Bug Importer
Comment 3 2021-02-26 06:50:17 PST
Note You need to log in before you can comment on or make changes to this bug.