[LFC][IFC] Inline boxes should not be referred as inline containers https://bugs.webkit.org/show_bug.cgi?id=222455

Reviewed by Antti Koivisto.

Inline boxes used to be called inline containers (e.g <span> -> [inline container start] and </span> -> [inline container end]).

* layout/inlineformatting/InlineContentBreaker.cpp:
(WebCore::Layout::hasTextRun):
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):
* layout/inlineformatting/InlineContentBreaker.h:
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::usedContentHeight const):
(WebCore::Layout::InlineFormattingContext::collectInlineContentIfNeeded):
* layout/inlineformatting/InlineFormattingContextGeometry.cpp:
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):
* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::appendInlineBoxStart):
(WebCore::Layout::Line::appendInlineBoxEnd):
(WebCore::Layout::Line::appendTextContent):
(WebCore::Layout::Line::TrimmableTrailingContent::remove):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):
(WebCore::Layout::LineBuilder::nextWrapOpportunity const):


Canonical link: https://commits.webkit.org/234616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273556 268f45cc-cd09-0410-ab3c-d52691b4dbfc